add details and connect

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ NEXTAUTH_SECRET="0PNF+l%/?&k('A5VNK6&nz#t3I$q#"
 
 GITHUB_ID="e0f151003e75f28c94af"
 GITHUB_SECRET="e882eac3ad4a4ccb4c532b025ceb23e919de9a48"
+
+
+MONGODB_URL="mongodb+srv://slodkiarnold:KakXpjBuzyVV8H8DpEV11JT@cluster0.par4oai.mongodb.net/lol"
