--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "mongodb": "^6.1.0",
+    "mongodb-client-encryption": "^6.0.0",
     "mongoose": "^7.6.2",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
